--- a/lang/1/ru.json
+++ b/lang/1/ru.json
@@ -1,5 +1,5 @@
 {
-  "version": 7,
+  "version": 6,
   "strings": [
     [
       "GEN00001",
@@ -355,7 +355,7 @@
     ],
     [
       "FRM20001",
-      "Биткоин-адрес для майнинга недопустимый или отсутствует. Пожалуйста, введите свой адрес NiceHash для майнинга:"
+      "Адрес для майнинга неверный или отсутствует. Пожалуйста, введите ваш адрес для майнинга NiceHash:"
     ],
     [
       "FRM20002",
@@ -366,12 +366,16 @@
       "введите свой адрес для майнинга здесь"
     ],
     [
+      "FRM20004",
+      "Адрес для майнинга найден в реестре. Нажмите «ОК», если хотите использовать этот адрес, в противном случае замените его"
+    ],
+    [
       "FRM20005",
       "Не знаете, где его получить? Войдите в свой аккаунт NiceHash, затем перейдите на эту страницу:"
     ],
     [
       "FRM20006",
-      "Недопустимый Биткоин-адрес. Введенный адрес неверный."
+      "Недействительный адрес для майнинга. Введенный адрес неверный."
     ],
     [
       "FRM20007",
@@ -628,6 +632,46 @@
     [
       "UPDT0010",
       ".\n\nНовая версия увеличивает безопасность вашего майнинга. Для правильной работы, нам нужно модифицировать командную строку запуска Excavator. Нажмите Да, если согласны сбросить ее. Если вы ее не сбросите, NiceHash QuickMiner может не работать правильно."
+    ],
+    [
+      "ETHF0001",
+      "Майнинг Ethereum завершен, проверьте варианты, доступные здесь"
+    ],
+    [
+      "ETHF0002",
+      "https://www.nicehash.com/my/mining/rigs"
+    ],
+    [
+      "ETHF0003",
+      "Больше информации"
+    ],
+    [
+      "ETHF0004",
+      "Закрыть"
+    ],
+    [
+      "ETHSW0001",
+      "Платежная ставка DaggerHashimoto снизилась из-за перехода Ethereum на Proof of Stake.\nТеперь вместо этого вы майните Ethereum Classic на алгоритме ETChash.\nВы можете выбрать другой алгоритм, нажав правой кнопкой мыши на значок QuickMiner в трее.\n\nНе забудьте установить профиль оптимизации через Rig Manager!"
+    ],
+    [
+      "ETHSW0004",
+      "Закрыть"
+    ],
+    [
+      "NHMA0001",
+      "Мы заметили, что вы используете внешний адрес для майнинга.\nПерейдите на адрес для майнинга NiceHash, чтобы получить более низкие комиссии и другие преимущества. "
+    ],
+    [
+      "NHMA0002",
+      "Изменить адрес"
+    ],
+    [
+      "NHMA0003",
+      "Закрыть"
+    ],
+    [
+      "NHMA0004",
+      "Больше информации"
     ],
     [
       "NOTICE0000",
