--- a/lang/1/sl.json
+++ b/lang/1/sl.json
@@ -635,11 +635,11 @@
     ],
     [
       "ETHF0001",
-      "Rudarjenje Ethereuma se je končalo, preverite možnosti, ki so na voljo tukaj"
+      "The Merge bo kmalu aktiviran zato pričakujte manjši zaslužek. \n\nZadnja verzija QuickMiner Release Candidate podpira dodatne algoritme. \n\nNaložite zadnjo verzijo QuickMiner Release Candidate v0.6.0.1"
     ],
     [
       "ETHF0002",
-      "https://www.nicehash.com/my/mining/rigs"
+      "https://www.nicehash.com/blog/post/ethereum-is-not-minable-anymore-what-now"
     ],
     [
       "ETHF0003",
