--- a/lang/1/ru.json
+++ b/lang/1/ru.json
@@ -635,11 +635,11 @@
     ],
     [
       "ETHF0001",
-      "Майнинг Ethereum завершен, проверьте варианты, доступные здесь"
+      "Скоро произойдет слияние (The Merge) и снизит прибыльность. \n\nПоследний кандидат на выпуск QuickMiner поддерживает дополнительные алгоритмы. \n\nОбновитесь на QuickMiner RC 0.6.0.1 прямо сейчас."
     ],
     [
       "ETHF0002",
-      "https://www.nicehash.com/my/mining/rigs"
+      "https://www.nicehash.com/blog/post/ethereum-is-not-minable-anymore-what-now"
     ],
     [
       "ETHF0003",
