--- a/lang/1/fr.json
+++ b/lang/1/fr.json
@@ -635,11 +635,11 @@
     ],
     [
       "ETHF0001",
-      "Le minage d'Ethereum est terminée, vérifier les options disponibles ici"
+      "The Merge se produira bientôt et diminue la rentabilité. \n\nLa dernière version candidate de QuickMiner prend en charge des algorithmes supplémentaires. \n\nMise à jour vers QuickMiner RC 0.6.0.1 maintenant."
     ],
     [
       "ETHF0002",
-      "https://www.nicehash.com/my/mining/rigs"
+      "https://www.nicehash.com/blog/post/ethereum-is-not-minable-anymore-what-now"
     ],
     [
       "ETHF0003",
