--- a/lang/1/de.json
+++ b/lang/1/de.json
@@ -635,11 +635,11 @@
     ],
     [
       "ETHF0001",
-      "Das Ethereum-Mining ist beendet, überprüfen Sie die hier verfügbaren Optionen"
+      "Der Merge wird bald stattfinden und die Rentabilität wird sich verringern. \n\nDer neueste QuickMiner Release Candidate unterstützt zusätzliche Algorithmen. \n\nAktualisieren Sie jetzt auf den QuickMiner RC 0.6.0.1."
     ],
     [
       "ETHF0002",
-      "https://www.nicehash.com/my/mining/rigs"
+      "https://www.nicehash.com/blog/post/ethereum-is-not-minable-anymore-what-now"
     ],
     [
       "ETHF0003",
