--- a/lang/1/pt.json
+++ b/lang/1/pt.json
@@ -635,11 +635,11 @@
     ],
     [
       "ETHF0001",
-      "A mineração de Ethereum terminou, verifique as opções disponíveis aqui"
+      "A fusão vai acontecer brevemente e irá diminuir a lucratividade. \n\nA versão mais recente do QuickMiner é compatível com algoritmos adicionais. \n\nAtualize para o QuickMiner RC 0.6.0.1 agora."
     ],
     [
       "ETHF0002",
-      "https://www.nicehash.com/my/mining/rigs"
+      "https://www.nicehash.com/blog/post/ethereum-is-not-minable-anymore-what-now"
     ],
     [
       "ETHF0003",
