--- a/lang/1/de.json
+++ b/lang/1/de.json
@@ -635,7 +635,7 @@
     ],
     [
       "ETHF0001",
-      "Der Merge wird bald stattfinden und die Rentabilität wird sich verringern. \n\nDer neueste QuickMiner Release Candidate unterstützt zusätzliche Algorithmen. \n\nAktualisieren Sie jetzt auf den QuickMiner RC 0.6.0.1."
+      "Der Merge wird bald stattfinden und die Rentabilität wird sich verringern. \nDer neueste QuickMiner Release Candidate unterstützt zusätzliche Algorithmen. \n\nAktualisieren Sie jetzt auf den QuickMiner RC 0.6.0.1."
     ],
     [
       "ETHF0002",
