--- a/lang/1/fr.json
+++ b/lang/1/fr.json
@@ -635,7 +635,7 @@
     ],
     [
       "ETHF0001",
-      "The Merge se produira bientôt et diminue la rentabilité. \n\nLa dernière version candidate de QuickMiner prend en charge des algorithmes supplémentaires. \n\nMise à jour vers QuickMiner RC 0.6.0.1 maintenant."
+      "The Merge se produira bientôt et diminue la rentabilité. \nLa dernière version candidate de QuickMiner prend en charge des algorithmes supplémentaires. \n\nMise à jour vers QuickMiner RC 0.6.0.1 maintenant."
     ],
     [
       "ETHF0002",
