--- a/lang/1/pt.json
+++ b/lang/1/pt.json
@@ -635,7 +635,7 @@
     ],
     [
       "ETHF0001",
-      "A fusão vai acontecer brevemente e irá diminuir a lucratividade. \n\nA versão mais recente do QuickMiner é compatível com algoritmos adicionais. \n\nAtualize para o QuickMiner RC 0.6.0.1 agora."
+      "A fusão vai acontecer brevemente e irá diminuir a lucratividade. \nA versão mais recente do QuickMiner é compatível com algoritmos adicionais. \n\nAtualize para o QuickMiner RC 0.6.0.1 agora."
     ],
     [
       "ETHF0002",
