--- a/lang/1/ru.json
+++ b/lang/1/ru.json
@@ -635,7 +635,7 @@
     ],
     [
       "ETHF0001",
-      "Скоро произойдет слияние (The Merge) и снизит прибыльность. \n\nПоследний кандидат на выпуск QuickMiner поддерживает дополнительные алгоритмы. \n\nОбновитесь на QuickMiner RC 0.6.0.1 прямо сейчас."
+      "Скоро произойдет слияние (The Merge) и снизит прибыльность. \nПоследний кандидат на выпуск QuickMiner поддерживает дополнительные алгоритмы. \n\nОбновитесь на QuickMiner RC 0.6.0.1 прямо сейчас."
     ],
     [
       "ETHF0002",
