--- a/lang/1/sl.json
+++ b/lang/1/sl.json
@@ -635,7 +635,7 @@
     ],
     [
       "ETHF0001",
-      "The Merge bo kmalu aktiviran zato pričakujte manjši zaslužek. \n\nZadnja verzija QuickMiner Release Candidate podpira dodatne algoritme. \n\nNaložite zadnjo verzijo QuickMiner Release Candidate v0.6.0.1"
+      "The Merge bo kmalu aktiviran zato pričakujte manjši zaslužek. \nZadnja verzija QuickMiner Release Candidate podpira dodatne algoritme. \n\nNaložite zadnjo verzijo QuickMiner Release Candidate v0.6.0.1"
     ],
     [
       "ETHF0002",
